View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024736 | Open CASCADE | OCCT:DRAW | public | 2014-03-19 11:56 | 2014-05-05 13:39 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.7.1 | Fixed in Version | 6.7.1 | ||
Summary | 0024736: There is new additional compilation warning on Linux platform | ||||
Description | There is new additional compilation warning on Linux platform: QABugs_19.cxx:1692, GNU C Compiler 4 (gcc), Priority: Normal missing braces around initializer for ‘Standard_Byte [3]’ | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Please test branch CR24736. |
|
Dear BugMaster, Branch CR24736 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 01b6debdb0d4b54a36bd0b40f79492b59c939a92 Number of compiler warnings: occt component : Linux: 29 (30 on master) Windows: 0 (0 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 385713972 / 386276008 Total CPU difference: 51058.3000000001 / 48827.5 Testing on Windows: Total MEMORY difference: 431867972 / 430913404 Total CPU difference: 32995.921875 / 35761.53125 There are no differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-03-19 11:56 |
|
New Issue | |
2014-03-19 11:56 |
|
Assigned To | => mkv |
2014-03-19 11:57 |
|
Assigned To | mkv => kgv |
2014-03-19 11:57 |
|
Status | new => assigned |
2014-03-19 12:33 | kgv | Note Added: 0028349 | |
2014-03-19 12:33 | kgv | Assigned To | kgv => bugmaster |
2014-03-19 12:33 | kgv | Severity | major => trivial |
2014-03-19 12:33 | kgv | Status | assigned => resolved |
2014-03-19 12:33 | kgv | Target Version | => 6.7.1 |
2014-03-19 12:33 | kgv | Status | resolved => reviewed |
2014-03-19 14:52 |
|
Assigned To | bugmaster => mkv |
2014-03-20 10:22 |
|
Note Added: 0028378 | |
2014-03-20 10:22 |
|
Test case number | => Not needed |
2014-03-20 10:22 |
|
Assigned To | mkv => bugmaster |
2014-03-20 10:22 |
|
Status | reviewed => tested |
2014-03-21 16:18 | bugmaster | Changeset attached | => occt master b56dd33f |
2014-03-21 16:18 | bugmaster | Status | tested => verified |
2014-03-21 16:18 | bugmaster | Resolution | open => fixed |
2014-04-04 11:54 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-04-10 14:25 |
|
Product Version | => 6.7.1 |
2014-04-10 14:25 |
|
Target Version | 6.8.0 => 6.7.1 |
2014-05-05 13:20 | bugmaster | Status | verified => closed |
2014-05-05 13:39 |
|
Fixed in Version | => 6.7.1 |