0024736: There is new additional compilation warning on Linux platform